<resources>
    <string name="app_name">SimpleTimer</string>
    <string name="action_add">Add</string>
    <string name="action_clear">Clear</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_name">Name</string>
    <string name="hint_timer_name">Timer\'s name</string>
    <string name="title_activity_history">Timer Histories</string>
    <string name="title_add_timer">Add Timer</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_edit_timer">Edit Timer</string>
    <string name="title_settings">Settings</string>

    <string name="menu_title_operation">Operation</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_reset">Reset</string>

    <string name="pref_ring_tone_title">Set Ringtone</string>
    <string name="pref_ring_tone_summary">Choose your favorite voice as timer\'s tone.</string>
    <string name="pref_ring_time_title">Duration of ringtone</string>
    <string name="pref_ring_time_summary">Ringtone will be stopped when time\'s up.</string>
    <string name="pref_ring_volume_title">Volume of ringtone</string>
    <string name="pref_vibrate_title">Vibration while play tone</string>
    <string name="pref_vibrate_summary_on">Enable vibration.</string>
    <string name="pref_vibrate_summary_off">Disable vibration.</string>
    <string name="pref_close_activity_title">Close alarm activity if tone time\'s up.</string>
    <string name="pref_close_activity_summary_on">Close.</string>
    <string name="pref_close_activity_summary_off">Not close.</string>
    <string name="pref_home_title">Home</string>
    <string name="pref_home_summary">Visit app home.</string>

    <string name="timer_name_5s">5 seconds</string>
    <string name="timer_name_1m">1 minute (jump rope)</string>
    <string name="timer_name_3m">3 minutes (rest eyes)</string>
    <string name="timer_name_10m">10 minutes (tea break)</string>
    <string name="timer_name_30m">30 minutes (Siesta)</string>
    <string name="timer_name_40m">40 minutes (meditation)</string>
    <string name="timer_name_60m">60 minutes (reading)</string>

    <string name="toast_cant_play">Can\'t play tone.</string>
    <string name="toast_need_read_external_permission">Need read external permission to play tone.</string>
</resources>
